try fix auth token

--- a/.github/workflows/release-new-version.yml
+++ b/.github/workflows/release-new-version.yml
@@ -83,8 +83,10 @@ jobs:
           scope: "@geordiep"
 
       - name: Add npm registry info for @geordiep scope
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}\n@geordiep:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=\$NODE_AUTH_TOKEN\n@geordiep:registry=https://npm.pkg.github.com" >> .npmrc
 
       - name: Publish package
         run: npm publish
